# VietnamLeadExtractor

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.agents/rules/: governance.md
.github/workflows/: scrape-weekly.yml
docs/: api-reference.md  huong-dan-su-dung.md
examples/: enriched_leads.json  sample_leads_hanoi.csv
src/: __init__.py
src/core/: ai_classifier.py  processor.py  scraper.py
src/utils/: logger.py
tests/: test_scraper.py
